# plantcv-geospatial

./: .gitattributes  .gitignore  CITATION.cff  README.md  mkdocs.yml  pyproject.toml  readtifimage.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: continuous-integration.yml
docs/: CONTRIBUTING.md  Field_layout.md  InteractiveShapes.md  analyze_chm.md  analyze_color.md  analyze_coverage.md  analyze_height_percentile.md  analyze_height_subtraction.md  analyze_spectral_index.md  center_grid_rois.md  changelog.md  convert_points.md  convert_shapes.md  create_grid_cells.md  create_polygons.md  documentation.md  getting_started.md  image_classes.md  index.md  installation.md  napari_field_grid.md  napari_save_points.md  plot_boundary_guide.md  plot_extraction.md  points2roi_circle.md  points_to_geojson.md  points_to_roi_circle.md  read_geotif.md  read_netcdf.md  resize.md  rgb_index.md  save_geotif.md  shape_flexible.md  shapes_flexible.md  shapes_grid.md  shapes_grid_from_coords.md  shapes_grid_from_points.md  shapes_to_geojson.md  split_rgb_channels.md  subtract_dsm.md  (+4 more)
plantcv/geospatial/: .#__init__.py  __init__.py  _globals.py  _helpers.py  center_grid_rois.py  classes.py  create_grid_cells.py  grid_cell.py  images.py  napari_grid.py  napari_polygon_grid.py  napari_save_points.py  plot_extraction.py  points2roi.py  points_to_geojson.py  read_geotif.py  read_netcdf.py  readtifimage.py  resize.py  rgb_index.py  save_geotif.py  shapes_to_geojson.py  split_rgb_channels.py  subtract_dsm.py  transform_points.py  transform_polygons.py
tests/: conftest.py  test_geospatial.py  test_geospatial_center_grid_rois.py  test_geospatial_create_grid_cells.py  test_geospatial_helpers.py  test_geospatial_images.py  test_geospatial_napari_grid.py  test_geospatial_napari_save_points.py  test_geospatial_points2roicircle.py  test_geospatial_points_to_geojson.py  test_geospatial_read_geotif.py  test_geospatial_read_netcdf.py  test_geospatial_resize.py  test_geospatial_rgb_index.py  test_geospatial_save_geotif.py  test_geospatial_shapes_to_geojson.py  test_geospatial_split_rgb_channels.py  test_geospatial_subtract_dsm.py  test_geospatial_transform_points.py  test_geospatial_transform_polygons.py
tests/analyze/: test.analyze.height_subtraction.py  test_analyze.height_subtraction.py  test_analyze_height_subtraction.py  test_geospatial_analyze_chm.py  test_geospatial_analyze_color.py  test_geospatial_analyze_coverage.py  test_geospatial_analyze_height_percentile.py  test_geospatial_analyze_mask.py  test_geospatial_analyze_spectral_index.py
tests/convert/: test_geospatial_points.py  test_geospatial_points_to_geojson.py  test_geospatial_points_to_roicircle.py  test_geospatial_shapes.py  test_geospatial_shapes_to_geojson.py  (+1 more)
(+80 files in other folders)
