[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "plantcv-geospatial"
dynamic = ["version"]
dependencies = [
    "plantcv",
]
requires-python = ">=3.6"
authors = [
    {name = "PlantCV Team", email = "plantcv@danforthcenter.org"},
]
description = "PlantCV Geospatial add-on package"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["plantcv", "geospatial", "image analysis"]
classifiers = [
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://plantcv.org"
Documentation = "https://plantcv.readthedocs.io"
Repository = "https://github.com/danforthcenter/plantcv-geospatial"
