[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["plantcv.geospatial"]

[project]
name = "plantcv-geospatial"
dynamic = ["version"]
dependencies = [
    "plantcv",
    "matplotlib",
]
requires-python = ">=3.6"
authors = [
    {name = "PlantCV Team", email = "plantcv@danforthcenter.org"},
]
description = "PlantCV Geospatial add-on package"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["plantcv", "geospatial", "image analysis"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Intended Audience :: Science/Research",
]

[project.urls]
Homepage = "https://plantcv.org"
Documentation = "https://plantcv.readthedocs.io"
Repository = "https://github.com/danforthcenter/plantcv-geospatial"
